# keboola-cli-mcp-server

./: .gitignore  .mcp.json.example  DEV_INSTRUCTIONS.md  README.md  TEMPLATE_CLAUDE.md  pyproject.toml  test_e2e.py  test_mcp_integration.py
.claude/: settings.local.json
src/keboola_cli_mcp_server/: __init__.py  __main__.py  config.py  server.py
src/keboola_cli_mcp_server/models/: __init__.py  schemas.py
src/keboola_cli_mcp_server/services/: __init__.py  branch_mapping.py  branch_resolver.py  git.py  sapi_client.py
src/keboola_cli_mcp_server/tools/: __init__.py  branch.py  cli_proxy.py  docs.py
tests/: __init__.py  test_branch_resolver.py  test_branch_tools.py  test_cli_proxy.py
